# gemini-album-art-generator

./: README.md  pyproject.toml
.github/: copilot-instructions.md
gemini_album_art_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py
src/gemini_album_art_generator.egg-info/: SOURCES.txt
